Basic Styles Applied

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </p>
             </aside>
         </section>
-        <footer class="footer"></footer>
+        <footer class="footer">&copy;FOOTER</footer>
     </main>
     
 </body>
