End Styles minus Main div

--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <main class="main">
+ <!--   <main class="main"> -->
         <header class="header">
             <div class="logo">Logo</div>
         </header>
+        
         <section class="section">
-            <article class="article column column-60">
-                <p class="section-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum nisi iusto asperiores, sapiente iste molestias aspernatur perferendis doloribus soluta dolorem voluptatibus, corporis consectetur libero corrupti quam ratione neque error perspiciatis architecto totam! Enim, quisquam nemo excepturi quibusdam maxime repellendus quae vel, aut veniam cumque quam veritatis dicta, quia aliquid!
-                </p>
-            </article>
-            <aside class="aside column column-40">
-                <p class="section-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, eum, qui! Voluptatibus unde nisi ut, sed ipsum sapiente aliquid quidem velit, a! Ipsum suscipit ducimus explicabo repudiandae nulla accusantium sit obcaecati ipsa laudantium. Ut modi magnam pariatur distinctio nesciunt iusto, ea, doloribus in voluptatum porro voluptatem? Necessitatibus sint, ea exercitationem?
-                </p>
-            </aside>
+            <div class="vcenter"><!-- wrapped in one element to calc size (the two together) -->
+                <article class="article column column-60">
+                    <p class="section-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum nisi iusto asperiores, sapiente iste molestias aspernatur perferendis doloribus soluta dolorem voluptatibus, corporis consectetur libero corrupti quam ratione neque error perspiciatis architecto totam! Enim, quisquam nemo excepturi quibusdam maxime repellendus quae vel, aut veniam cumque quam veritatis dicta, quia aliquid!
+                    </p>
+                </article>
+                <aside class="aside column column-40">
+                    <p class="section-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, eum, qui! Voluptatibus unde nisi ut, sed ipsum sapiente aliquid quidem velit, a! Ipsum suscipit ducimus explicabo repudiandae nulla accusantium sit obcaecati ipsa laudantium. Ut modi magnam pariatur distinctio nesciunt iusto, ea, doloribus in voluptatum porro voluptatem? Necessitatibus sint, ea exercitationem?
+                    </p>
+                </aside>
+            </div>
         </section>
         <footer class="footer">&copy;FOOTER</footer>
-    </main>
+   <!-- </main> -->
     
 </body>
 </html>
